deploy/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: dev.local
    http:
      paths:
      - paths: /?(.*)
        pathType: Prefix
        backend:
          service:
            name: app-service
            port:
              number: 80
      - paths: /api/?(.*)
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8000
